--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -60,9 +60,7 @@
                     <div class="mb-5">
                         <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ваш
                             ИИН</label>
-                        {{ form.pasport_id|add_class:"bg-white border border-gray-300 text-black text-sm rounded-lg
-                        focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600
-                        dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }}
+                        {{ form.pasport_id|add_class:"bg-white border border-gray-300 text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }}
                     </div>
                     <div class="mb-5">
                         <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ваш домашний
