--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -70,6 +70,8 @@
     <script src="{% static 'js/Cookie.js' %}"></script>
     <script src="{% static 'js/status_to_color.js' %}"></script>
     <script src="{% static 'js/profile/general.js' %}"></script>
+{% else %}
+  <script src="{% static 'js/profile/patient/send_form.js' %}"></script>
 {% endif %}
 
 <script>
