--- a/templates/appointments/create_appointment.html
+++ b/templates/appointments/create_appointment.html
@@ -1,21 +1,17 @@
 {% extends 'pages/blank.html' %} {% block content %}
-<div class="max-w-md mx-auto mt-8">
+<div class=" mx-auto mt-8">
   <h1 class="text-2xl font-bold mb-4">Запись на приём</h1>
 
-  <div class=" flex flex-wrap justify-center">
+  <div class=" flex flex-col flex-wrap justify-center">
     <!-- Календарь с датами -->
 
-    <div class="w-full max-w-xs mx-auto">
-      <label
-        for="doctor"
-        class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-400"
-        >Выберите врача:</label
-      >
+    <div class="flex flex-col  w-full  p-6 rounded-lg bg-white shadow-xl mb-6">
+      <label for="doctor" class="block mb-2 text-sm font-medium text-gray-900 dark:text-gray-300">Выберите врача:</label>
       <select
         id="doctor"
         name="doctor"
         required
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        class="bg-white border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-3 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-500 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       >
         {% for doctor in doctors %}
         <option value="{{ doctor.id }}">{{ doctor.username }}</option>
@@ -23,9 +19,9 @@
       </select>
     </div>
 
-    <div  class="flex" >
+    <div  class="flex rounded-lg bg-white shadow-lg overflow-hidden justify-center" >
 
-      <div class="calendar bg-gray-100 p-4 flex-1">
+      <div class="calendar bg-gray-100 p-4 flex-1 ">
         <div inline-datepicker data-date="02/25/2022"></div>
       </div>
 
@@ -98,7 +94,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/datepicker.min.js"></script>
 {% load static %}
 <script src="{% static 'js/Cookie.js' %}"></script>
-\
 <script src="{% static 'js/pacient_appointment.js' %}"></script>
 
 {% endblock %}
