--- a/templates/appointments/manager_actions.html
+++ b/templates/appointments/manager_actions.html
@@ -9,10 +9,10 @@
     <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ваш ИИН</label>
     {{ form.time|add_class:"bg-white border border-gray-300 text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }}
   </div>
-  <div class="mb-5">
+  {% comment %} <div class="mb-5">
     <label for="" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Ваш ИИН</label>
     {{ form.comment|add_class:"bg-white border border-gray-300 text-black text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" }}
-  </div>
+  </div> {% endcomment %}
   <div class="flex gap-2">
 
     <button type="submit" class="bg-green-500 text-white font-semibold px-5 py-2 rounded-lg" name="action"
