--- a/templates/appointments/create_appointment.html
+++ b/templates/appointments/create_appointment.html
@@ -19,7 +19,13 @@
       </select>
     </div>
 
-    <div  class="flex rounded-lg bg-white shadow-lg overflow-hidden justify-center" >
+    <div class="flex flex-col w-full p-6 bg-white shadow-xl mb-6">
+      <h1 class="font-bold"> Информация о докторе:</h1>
+      <ul class="mt-6" id="doctor_information">
+      </ul>
+    </div>
+
+    <div  class="flex rounded-lg shadow-lg overflow-hidden justify-center" >
 
       <div class="calendar bg-gray-100 p-4 flex-1 ">
         <div inline-datepicker data-date="02/25/2022"></div>
@@ -50,6 +56,8 @@
       </div>
     </div>
   </div>
+
+  
 
   <!-- Модальное окно -->
   <div
