--- a/templates/appointments/create_appointment.html
+++ b/templates/appointments/create_appointment.html
@@ -28,7 +28,7 @@
     <div  class="flex rounded-lg shadow-lg overflow-hidden justify-center" >
 
       <div class="calendar bg-gray-100 p-4 flex-1 ">
-        <div inline-datepicker data-date="02/25/2022"></div>
+        <div inline-datepicker data-date="getCurrentDate();"></div>
       </div>
 
       <!-- Список с доступным временем -->
